--- a/logo-nav.html
+++ b/logo-nav.html
@@ -8,11 +8,11 @@
   <title>Reigister SSH - Key</title>
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/logo-nav.css" rel="stylesheet">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script><script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-    <script src="js/request.js"></script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script><script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>-->
+    <!--<script src="js/request.js"></script>-->
 </head>
 
-<body ng-app="form" ng-controller="formController">
+<body>
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -31,24 +31,17 @@
       <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">SSH - Register</div>
-            <form ng-submit="processForm()">
+            <form action="register.php" method="post">
             <div class="panel-body">
                 <div class="input-group input-group-lg">
                     <span class="input-group-addon">id_rsa.pub</span>
-                    <textarea class="form-control" name="keyPub" cols="5" rows="8" placeholder="insira aqui sua chave gerada" style="height: auto;" ng-model="formData.key"></textarea>
+                    <textarea class="form-control" name="keyPub" cols="5" rows="8" placeholder="insira aqui sua chave gerada" style="height: auto;"></textarea>
                 </div>
           </div>
-                <button type="submit" class="btn btn-success btn-lg btn-block">
-                    <span class="glyphicon glyphicon-flash"></span> Upload!
-                </button>
-          </div>
-
-        <pre>
-		    {{ formData }}
-	    </pre>
+                <input type="submit" class="btn btn-success btn-lg btn-block">
         </div>
       </div>
-
+</div>
     </div>
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
